# IIS_NEW

./: .cache.sqlite  .gitignore  README.md  data.dvc  docker-compose.yml  pyproject.toml  serveApi.py
.dvc/: config
.github/workflows/: ci.yml  deploy_api.yml  deploy_gui.yml  evaluate_past_predictions.yml  fetch_api.yml  train_test_models.yml
data/processed/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
data/raw/: fetch_mbajk.csv
gx/: great_expectations.yml
gx/checkpoints/: my_checkpoint.yml
gx/expectations/: .ge_store_backend_id  merged_suit.json  my_suite.json
models/: 10_model.h5  11_model.h5  11_other_scaler.pkl  12_model.h5  12_other_scaler.pkl  13_model.h5  13_other_scaler.pkl  14_model.h5  15_model.h5  15_other_scaler.pkl  16_model.h5  17_model.h5  18_model.h5  19_model.h5  1_model.h5  1_other_scaler.pkl  1_scaler.pkl  20_model.h5  21_model.h5  22_model.h5  22_other_scaler.pkl  23_model.h5  23_other_scaler.pkl  24_model.h5  25_model.h5  26_model.h5  27_model.h5  28_model.h5  28_other_scaler.pkl  29_model.h5  29_other_scaler.pkl  2_model.h5  2_other_scaler.pkl  3_model.h5  3_other_scaler.pkl  4_model.h5  5_model.h5  5_other_scaler.pkl  6_model.h5  7_model.h5  (+5 more)
models/default/: base_data_model.h5
models/multi/: base_data_model.h5  scaler.pkl
notebooks/: .cache.sqlite  fetchData.ipynb  fetchDataOneFile.ipynb  fetchWeather.ipynb  processData.ipynb  train_mode.ipynb  train_multi.ipynb
reports/: 10_metrics.txt  11_metrics.txt  12_metrics.txt  13_metrics.txt  14_metrics.txt  15_metrics.txt  16_metrics.txt  17_metrics.txt  18_metrics.txt  19_metrics.txt  1_metrics.txt  20_metrics.txt  21_metrics.txt  22_metrics.txt  23_metrics.txt  24_metrics.txt  25_metrics.txt  26_metrics.txt  27_metrics.txt  28_metrics.txt  29_metrics.txt  2_metrics.txt  3_metrics.txt  4_metrics.txt  5_metrics.txt  6_metrics.txt  7_metrics.txt  8_metrics.txt  9_metrics.txt  default_train_metrics.txt  metrics.txt  test_metrics.txt  train_metrics.txt
reports/evidently_tests/: data_drift.html  data_drift.json
src/: environment_settings.py
src/data/: .cache.sqlite  evidently_test.py  fetch_data.py  fetch_mbajk_data.py  fetch_weather.py  fetch_weather_data.py  (+7 more)
tests/: test_apis.py  test_mbajk_api.py
(+25 files in other folders)
