[tool.poetry]
name = "iis"
version = "0.1.0"
description = ""
authors = ["jansernec <jan.sernec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
tensorflow = "2.11.0"
tensorflow-io-gcs-filesystem = "0.28.0"
python = "3.10.2"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
flask = "^2.1.5"
poethepoet = "^0.25.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
matplotlib = "^3.8.4"
flask-cors = "^4.0.0"
pydantic = "^2.6.4"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
