[tool.poetry]
name = "iis"
version = "0.1.0"
description = ""
authors = ["jansernec <jan.sernec@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.13.0" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
keras = {version = "^2.13.0" }
python = "3.10.2"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
flask = "^2.1.5"
poethepoet = "^0.25.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
matplotlib = "^3.8.4"
flask-cors = "^4.0.0"
pydantic = "^2.6.4"
pytest = "^8.1.1"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
numpy = "^1.26.4"
dvc = "^3.50.1"
dvc-s3 = "^3.2.0"
great-expectations = "^0.18.13"
evidently = "^0.4.20"
mlflow = "^2.12.1"
dagshub = "^0.3.26"
tf2onnx = "^1.16.1"
onnxruntime = "^1.17.3"

pymongo = "^4.7.2"
[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
train_all = "src.models.train_all_models:main"
